--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,8 @@
 
 /* Your CSS Code here. */
+#center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid green; 
+}
